src/parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  fdecl : FUNC typ ID LPAREN params_opt RPAREN LCURLY vdecl_list stmt_list RCURLY

   6  params_opt :
   7             | params_list

   8  params_list : typ ID
   9              | params_list COMMA typ ID

  10  typ : BOOL
  11      | INT
  12      | STRING
  13      | NOTE
  14      | TONE
  15      | RHYTHM
  16      | NONE
  17      | typ LBRACK RBRACK

  18  vdecl_list :
  19             | vdecl_list vdecl

  20  vdecl : typ ID SEP

  21  stmt_list : stmt
  22            | stmt_list stmt

  23  stmt : expr SEP
  24       | RETURN expr_opt SEP
  25       | LCURLY stmt_list RCURLY
  26       | IF expr stmt
  27       | IF expr stmt ELSE stmt
  28       | FOR expr IN expr stmt
  29       | WHILE expr stmt

  30  expr_opt :
  31           | expr

  32  expr : literals
  33       | ID
  34       | expr PLUS expr
  35       | expr MINUS expr
  36       | expr TIMES expr
  37       | expr DIVIDE expr
  38       | expr MOD expr
  39       | expr EQ expr
  40       | expr NEQ expr
  41       | expr LT expr
  42       | expr LTE expr
  43       | expr GT expr
  44       | expr GTE expr
  45       | NOT expr
  46       | expr AND expr
  47       | expr OR expr
  48       | lit_array CONCAT lit_array
  49       | lit_array BIND lit_array
  50       | expr DUP expr
  51       | ID ASSIGN expr
  52       | ID LPAREN args_opt RPAREN

  53  args_opt :
  54           | args_list

  55  args_list : expr
  56            | args_list COMMA expr

  57  literals : LIT_BOOL
  58           | LIT_INT
  59           | LIT_STRING
  60           | LIT_RHYTHM
  61           | lit_note
  62           | lit_array

  63  lit_note : LT LIT_INT COMMA LIT_RHYTHM GT

  64  lit_array : LBRACK items_list RBRACK

  65  items_list :
  66             | expr
  67             | items_list COMMA expr

  68  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (68)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (68)

	.  reduce 68


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	EOF  shift 5
	NOTE  shift 6
	TONE  shift 7
	RHYTHM  shift 8
	INT  shift 9
	BOOL  shift 10
	STRING  shift 11
	NONE  shift 12
	FUNC  shift 13
	.  error

	vdecl  goto 14
	fdecl  goto 15
	typ  goto 16


state 5
	program : decls EOF .  (1)

	.  reduce 1


state 6
	typ : NOTE .  (13)

	.  reduce 13


state 7
	typ : TONE .  (14)

	.  reduce 14


state 8
	typ : RHYTHM .  (15)

	.  reduce 15


state 9
	typ : INT .  (11)

	.  reduce 11


state 10
	typ : BOOL .  (10)

	.  reduce 10


state 11
	typ : STRING .  (12)

	.  reduce 12


state 12
	typ : NONE .  (16)

	.  reduce 16


state 13
	fdecl : FUNC . typ ID LPAREN params_opt RPAREN LCURLY vdecl_list stmt_list RCURLY  (5)

	NOTE  shift 6
	TONE  shift 7
	RHYTHM  shift 8
	INT  shift 9
	BOOL  shift 10
	STRING  shift 11
	NONE  shift 12
	.  error

	typ  goto 17


state 14
	decls : decls vdecl .  (3)

	.  reduce 3


state 15
	decls : decls fdecl .  (4)

	.  reduce 4


state 16
	typ : typ . LBRACK RBRACK  (17)
	vdecl : typ . ID SEP  (20)

	LBRACK  shift 18
	ID  shift 19
	.  error


state 17
	fdecl : FUNC typ . ID LPAREN params_opt RPAREN LCURLY vdecl_list stmt_list RCURLY  (5)
	typ : typ . LBRACK RBRACK  (17)

	LBRACK  shift 18
	ID  shift 20
	.  error


state 18
	typ : typ LBRACK . RBRACK  (17)

	RBRACK  shift 21
	.  error


state 19
	vdecl : typ ID . SEP  (20)

	SEP  shift 22
	.  error


state 20
	fdecl : FUNC typ ID . LPAREN params_opt RPAREN LCURLY vdecl_list stmt_list RCURLY  (5)

	LPAREN  shift 23
	.  error


state 21
	typ : typ LBRACK RBRACK .  (17)

	.  reduce 17


state 22
	vdecl : typ ID SEP .  (20)

	.  reduce 20


state 23
	fdecl : FUNC typ ID LPAREN . params_opt RPAREN LCURLY vdecl_list stmt_list RCURLY  (5)
	params_opt : .  (6)

	NOTE  shift 6
	TONE  shift 7
	RHYTHM  shift 8
	INT  shift 9
	BOOL  shift 10
	STRING  shift 11
	NONE  shift 12
	RPAREN  reduce 6

	typ  goto 24
	params_opt  goto 25
	params_list  goto 26


state 24
	params_list : typ . ID  (8)
	typ : typ . LBRACK RBRACK  (17)

	LBRACK  shift 18
	ID  shift 27
	.  error


state 25
	fdecl : FUNC typ ID LPAREN params_opt . RPAREN LCURLY vdecl_list stmt_list RCURLY  (5)

	RPAREN  shift 28
	.  error


state 26
	params_opt : params_list .  (7)
	params_list : params_list . COMMA typ ID  (9)

	COMMA  shift 29
	RPAREN  reduce 7


state 27
	params_list : typ ID .  (8)

	.  reduce 8


state 28
	fdecl : FUNC typ ID LPAREN params_opt RPAREN . LCURLY vdecl_list stmt_list RCURLY  (5)

	LCURLY  shift 30
	.  error


state 29
	params_list : params_list COMMA . typ ID  (9)

	NOTE  shift 6
	TONE  shift 7
	RHYTHM  shift 8
	INT  shift 9
	BOOL  shift 10
	STRING  shift 11
	NONE  shift 12
	.  error

	typ  goto 31


state 30
	fdecl : FUNC typ ID LPAREN params_opt RPAREN LCURLY . vdecl_list stmt_list RCURLY  (5)
	vdecl_list : .  (18)

	.  reduce 18

	vdecl_list  goto 32


state 31
	params_list : params_list COMMA typ . ID  (9)
	typ : typ . LBRACK RBRACK  (17)

	LBRACK  shift 18
	ID  shift 33
	.  error


state 32
	fdecl : FUNC typ ID LPAREN params_opt RPAREN LCURLY vdecl_list . stmt_list RCURLY  (5)
	vdecl_list : vdecl_list . vdecl  (19)

	LBRACK  shift 34
	LCURLY  shift 35
	LT  shift 36
	NOT  shift 37
	NOTE  shift 6
	TONE  shift 7
	RHYTHM  shift 8
	INT  shift 9
	BOOL  shift 10
	STRING  shift 11
	NONE  shift 12
	IF  shift 38
	FOR  shift 39
	WHILE  shift 40
	RETURN  shift 41
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	vdecl  goto 47
	typ  goto 16
	stmt_list  goto 48
	stmt  goto 49
	expr  goto 50
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 33
	params_list : params_list COMMA typ ID .  (9)

	.  reduce 9


state 34
	lit_array : LBRACK . items_list RBRACK  (64)
	items_list : .  (65)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	RBRACK  reduce 65
	COMMA  reduce 65

	expr  goto 54
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53
	items_list  goto 55


state 35
	stmt : LCURLY . stmt_list RCURLY  (25)

	LBRACK  shift 34
	LCURLY  shift 35
	LT  shift 36
	NOT  shift 37
	IF  shift 38
	FOR  shift 39
	WHILE  shift 40
	RETURN  shift 41
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	stmt_list  goto 56
	stmt  goto 49
	expr  goto 50
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 36
	lit_note : LT . LIT_INT COMMA LIT_RHYTHM GT  (63)

	LIT_INT  shift 57
	.  error


state 37
	expr : NOT . expr  (45)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 58
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 38
	stmt : IF . expr stmt  (26)
	stmt : IF . expr stmt ELSE stmt  (27)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 59
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 39
	stmt : FOR . expr IN expr stmt  (28)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 60
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 40
	stmt : WHILE . expr stmt  (29)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 61
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 41
	stmt : RETURN . expr_opt SEP  (24)
	expr_opt : .  (30)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	SEP  reduce 30

	expr  goto 62
	expr_opt  goto 63
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 42
	literals : LIT_BOOL .  (57)

	.  reduce 57


state 43
	literals : LIT_INT .  (58)

	.  reduce 58


state 44
	literals : LIT_STRING .  (59)

	.  reduce 59


state 45
	literals : LIT_RHYTHM .  (60)

	.  reduce 60


state 46
	expr : ID .  (33)
	expr : ID . ASSIGN expr  (51)
	expr : ID . LPAREN args_opt RPAREN  (52)

	ASSIGN  shift 64
	LPAREN  shift 65
	SEP  reduce 33
	RPAREN  reduce 33
	LBRACK  reduce 33
	RBRACK  reduce 33
	LCURLY  reduce 33
	COMMA  reduce 33
	PLUS  reduce 33
	MINUS  reduce 33
	TIMES  reduce 33
	DIVIDE  reduce 33
	MOD  reduce 33
	DUP  reduce 33
	EQ  reduce 33
	NEQ  reduce 33
	LT  reduce 33
	LTE  reduce 33
	GT  reduce 33
	GTE  reduce 33
	AND  reduce 33
	OR  reduce 33
	NOT  reduce 33
	IN  reduce 33
	IF  reduce 33
	FOR  reduce 33
	WHILE  reduce 33
	RETURN  reduce 33
	LIT_BOOL  reduce 33
	LIT_INT  reduce 33
	LIT_STRING  reduce 33
	LIT_RHYTHM  reduce 33
	ID  reduce 33


state 47
	vdecl_list : vdecl_list vdecl .  (19)

	.  reduce 19


state 48
	fdecl : FUNC typ ID LPAREN params_opt RPAREN LCURLY vdecl_list stmt_list . RCURLY  (5)
	stmt_list : stmt_list . stmt  (22)

	LBRACK  shift 34
	LCURLY  shift 35
	RCURLY  shift 66
	LT  shift 36
	NOT  shift 37
	IF  shift 38
	FOR  shift 39
	WHILE  shift 40
	RETURN  shift 41
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	stmt  goto 67
	expr  goto 50
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 49
	stmt_list : stmt .  (21)

	.  reduce 21


state 50
	stmt : expr . SEP  (23)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LTE expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GTE expr  (44)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : expr . DUP expr  (50)

	SEP  shift 68
	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	MOD  shift 73
	DUP  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LTE  shift 78
	GT  shift 79
	GTE  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 51
	expr : literals .  (32)

	.  reduce 32


state 52
	expr : lit_array . CONCAT lit_array  (48)
	expr : lit_array . BIND lit_array  (49)
	literals : lit_array .  (62)

	CONCAT  shift 83
	BIND  shift 84
	SEP  reduce 62
	RPAREN  reduce 62
	LBRACK  reduce 62
	RBRACK  reduce 62
	LCURLY  reduce 62
	COMMA  reduce 62
	PLUS  reduce 62
	MINUS  reduce 62
	TIMES  reduce 62
	DIVIDE  reduce 62
	MOD  reduce 62
	DUP  reduce 62
	EQ  reduce 62
	NEQ  reduce 62
	LT  reduce 62
	LTE  reduce 62
	GT  reduce 62
	GTE  reduce 62
	AND  reduce 62
	OR  reduce 62
	NOT  reduce 62
	IN  reduce 62
	IF  reduce 62
	FOR  reduce 62
	WHILE  reduce 62
	RETURN  reduce 62
	LIT_BOOL  reduce 62
	LIT_INT  reduce 62
	LIT_STRING  reduce 62
	LIT_RHYTHM  reduce 62
	ID  reduce 62


state 53
	literals : lit_note .  (61)

	.  reduce 61


state 54
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LTE expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GTE expr  (44)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : expr . DUP expr  (50)
	items_list : expr .  (66)

	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	MOD  shift 73
	DUP  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LTE  shift 78
	GT  shift 79
	GTE  shift 80
	AND  shift 81
	OR  shift 82
	RBRACK  reduce 66
	COMMA  reduce 66


state 55
	lit_array : LBRACK items_list . RBRACK  (64)
	items_list : items_list . COMMA expr  (67)

	RBRACK  shift 85
	COMMA  shift 86
	.  error


state 56
	stmt_list : stmt_list . stmt  (22)
	stmt : LCURLY stmt_list . RCURLY  (25)

	LBRACK  shift 34
	LCURLY  shift 35
	RCURLY  shift 87
	LT  shift 36
	NOT  shift 37
	IF  shift 38
	FOR  shift 39
	WHILE  shift 40
	RETURN  shift 41
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	stmt  goto 67
	expr  goto 50
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 57
	lit_note : LT LIT_INT . COMMA LIT_RHYTHM GT  (63)

	COMMA  shift 88
	.  error


state 58
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LTE expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GTE expr  (44)
	expr : NOT expr .  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : expr . DUP expr  (50)

	.  reduce 45


state 59
	stmt : IF expr . stmt  (26)
	stmt : IF expr . stmt ELSE stmt  (27)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LTE expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GTE expr  (44)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : expr . DUP expr  (50)

	LBRACK  shift 34
	LCURLY  shift 35
	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	MOD  shift 73
	DUP  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 89
	LTE  shift 78
	GT  shift 79
	GTE  shift 80
	AND  shift 81
	OR  shift 82
	NOT  shift 37
	IF  shift 38
	FOR  shift 39
	WHILE  shift 40
	RETURN  shift 41
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	stmt  goto 90
	expr  goto 50
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 60
	stmt : FOR expr . IN expr stmt  (28)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LTE expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GTE expr  (44)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : expr . DUP expr  (50)

	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	MOD  shift 73
	DUP  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LTE  shift 78
	GT  shift 79
	GTE  shift 80
	AND  shift 81
	OR  shift 82
	IN  shift 91
	.  error


state 61
	stmt : WHILE expr . stmt  (29)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LTE expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GTE expr  (44)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : expr . DUP expr  (50)

	LBRACK  shift 34
	LCURLY  shift 35
	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	MOD  shift 73
	DUP  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 89
	LTE  shift 78
	GT  shift 79
	GTE  shift 80
	AND  shift 81
	OR  shift 82
	NOT  shift 37
	IF  shift 38
	FOR  shift 39
	WHILE  shift 40
	RETURN  shift 41
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	stmt  goto 92
	expr  goto 50
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 62
	expr_opt : expr .  (31)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . MOD expr  (38)
	expr : expr . EQ expr  (39)
	expr : expr . NEQ expr  (40)
	expr : expr . LT expr  (41)
	expr : expr . LTE expr  (42)
	expr : expr . GT expr  (43)
	expr : expr . GTE expr  (44)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : expr . DUP expr  (50)

	PLUS  shift 69
	MINUS  shift 70
	TIMES  shift 71
	DIVIDE  shift 72
	MOD  shift 73
	DUP  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	LTE  shift 78
	GT  shift 79
	GTE  shift 80
	AND  shift 81
	OR  shift 82
	SEP  reduce 31


state 63
	stmt : RETURN expr_opt . SEP  (24)

	SEP  shift 93
	.  error


state 64
	expr : ID ASSIGN . expr  (51)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 94
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 65
	expr : ID LPAREN . args_opt RPAREN  (52)
	args_opt : .  (53)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	RPAREN  reduce 53

	expr  goto 95
	literals  goto 51
	lit_array  goto 52
	args_opt  goto 96
	args_list  goto 97
	lit_note  goto 53


state 66
	fdecl : FUNC typ ID LPAREN params_opt RPAREN LCURLY vdecl_list stmt_list RCURLY .  (5)

	.  reduce 5


state 67
	stmt_list : stmt_list stmt .  (22)

	.  reduce 22


state 68
	stmt : expr SEP .  (23)

	.  reduce 23


state 69
	expr : expr PLUS . expr  (34)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 98
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 70
	expr : expr MINUS . expr  (35)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 99
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 71
	expr : expr TIMES . expr  (36)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 100
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 72
	expr : expr DIVIDE . expr  (37)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 101
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 73
	expr : expr MOD . expr  (38)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 102
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 74
	expr : expr DUP . expr  (50)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 103
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 75
	expr : expr EQ . expr  (39)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 104
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 76
	expr : expr NEQ . expr  (40)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 105
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 77
	expr : expr LT . expr  (41)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 106
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 78
	expr : expr LTE . expr  (42)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 107
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 79
	expr : expr GT . expr  (43)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 108
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 80
	expr : expr GTE . expr  (44)

	LBRACK  shift 34
	LT  shift 36
	NOT  shift 37
	LIT_BOOL  shift 42
	LIT_INT  shift 43
	LIT_STRING  shift 44
	LIT_RHYTHM  shift 45
	ID  shift 46
	.  error

	expr  goto 109
	literals  goto 51
	lit_array  goto 52
	lit_note  goto 53


state 81
	expr : expr AND . expr  (46)
